# task-view

./: .dockerignore  .gitignore  Dockerfile  Docker部署指南.md  GitHub自动构建配置说明.md  README.md  build-rust.sh  docker-compose.yml  部署指南.md  项目指南.md
.github/workflows/: build-to-repo.yml  frontend-build.yml  main.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  build-rust.sh
backend/migrations/: 001_initial.sql  002_add_completion_details.sql
backend/src/: config.rs  database.rs  main.rs
backend/src/handlers/: auth.rs  auth_simple.rs  invite.rs  mod.rs  task.rs
backend/src/models/: invite.rs  mod.rs  task.rs  user.rs
docs/: API接口文档.md  MVP开发计划.md  项目初始化完成报告.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/invite/: InviteStatus.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  RoleSelector.tsx  TaskCompletionModal.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: BoardPage.tsx  DashboardPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/invite/: CreateInvitePage.tsx  UseInvitePage.tsx
frontend/src/pages/task/: CreateTaskPage.tsx  EditTaskPage.tsx  TaskBoardListPage.tsx  TaskListPage.tsx
frontend/src/services/: api.ts  auth.ts  invite.ts  task.ts
frontend/src/styles/: modern-design.css
frontend/src/types/: auth.ts
